--- a/patientFiles.html
+++ b/patientFiles.html
@@ -171,32 +171,48 @@
 
         // Load records
         async function loadMyFiles() {
-            const ul = document.getElementById("recordsList");
-            ul.innerHTML = `<li class="text-gray-500">Loading…</li>`;
+            const tbody = document.getElementById("recordsList");
+            tbody.innerHTML = `<tr><td colspan="5" class="text-center text-gray-500 py-2">Loading…</td></tr>`;
             try {
                 const res = await fetch(`${API}/records/my`, {
                     headers: { "Authorization": "Bearer " + token }
                 });
                 if (res.status === 401) { localStorage.clear(); return location.replace("login.html"); }
                 const data = await res.json();
-                if (!res.ok || !Array.isArray(data)) { ul.innerHTML = `<li class="text-red-600">Failed to load</li>`; return; }
-                if (!data.length) { ul.innerHTML = `<li class="text-gray-500">No files</li>`; return; }
-                ul.innerHTML = "";
-                data.forEach(r => {
+                if (!res.ok || !Array.isArray(data)) {
+                    tbody.innerHTML = `<tr><td colspan="5" class="text-center text-red-600 py-2">Failed to load</td></tr>`;
+                    return;
+                }
+                if (!data.length) {
+                    tbody.innerHTML = `<tr><td colspan="5" class="text-center text-gray-500 py-2">No files</td></tr>`;
+                    return;
+                }
+                tbody.innerHTML = "";
+                data.forEach((r, i) => {
                     const name = r.file_name || "file";
                     const href = r.file_url || `${API}/records/signed/${r.record_id}`;
-                    const li = document.createElement("li");
-                    li.className = "list-disc list-inside flex items-center gap-2";
-                    li.innerHTML = `
-            <a href="${href}" target="_blank" class="hover:underline">${name}</a>
-            <button class="text-red-600 text-xs underline" onclick="deleteFile(${r.record_id})">Delete</button>
-          `;
-                    ul.appendChild(li);
+                    const desc = r.description || "-";
+                    const doctor = r.doctor_name || "-"; // backend should return doctor name, otherwise join doctor table
+
+                    const tr = document.createElement("tr");
+                    tr.innerHTML = `
+        <td class="border px-2 py-1">${i + 1}</td>
+        <td class="border px-2 py-1">
+          <a href="${href}" target="_blank" class="text-blue-600 hover:underline">${name}</a>
+        </td>
+        <td class="border px-2 py-1">${desc}</td>
+        <td class="border px-2 py-1">${doctor}</td>
+        <td class="border px-2 py-1">
+          <button class="text-red-600 text-xs underline" onclick="deleteFile(${r.record_id})">Delete</button>
+        </td>
+      `;
+                    tbody.appendChild(tr);
                 });
             } catch {
-                ul.innerHTML = `<li class="text-red-600">Error</li>`;
+                tbody.innerHTML = `<tr><td colspan="5" class="text-center text-red-600 py-2">Error</td></tr>`;
             }
         }
+
 
         // Delete file
         window.deleteFile = async function (recordId) {
